# web-crapping-agent

./: .gitignore  Dockerfile  main.py  pyproject.toml
src/: api.py  chainlit.py  fastapi.py  main.py
src/api/: app.py
src/frontview/: chainlit.py
src/helloworld/: extract_file.py  main.py
src/models/: openai.py
