[project]
name = "web-crawling-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.8.3",
    "fastapi[standard]>=0.116.2",
    "google-genai>=1.45.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "openai>=2.5.0",
]
